--- a/WeatherApp/WeatherApp/Info.plist
+++ b/WeatherApp/WeatherApp/Info.plist
@@ -23,21 +23,16 @@
 	</dict>
     <key>NSAppTransportSecurity</key>
     <dict>
-      <key>NSExceptionDomains</key>
-      <dict>
-        <key>gd.geobytes.com</key>
+        <key>NSExceptionDomains</key>
         <dict>
-          <!--Include to allow subdomains-->
-          <key>NSIncludesSubdomains</key>
-          <true/>
-          <!--Include to allow HTTP requests-->
-          <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
-          <true/>
-          <!--Include to specify minimum TLS version-->
-          <key>NSTemporaryExceptionMinimumTLSVersion</key>
-          <string>TLSv1.1</string>
+            <key>geobytes.com</key>
+            <dict>
+                <key>NSExceptionAllowsInsecureHTTPLoads</key>
+                <true/>
+                <key>NSIncludesSubdomains</key>
+                <true/>
+            </dict>
         </dict>
-      </dict>
     </dict>
 </dict>
 </plist>
